# liftSim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-start.bat  docker-compose.yml  pyproject.toml  reproduce_issue.py  reproduction_output.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: endpoints.py  websocket.py
app/core/: algorithms.py  building.py  config.py  lift.py  multi_lift.py  sessions.py
app/models/: schemas.py
frontend/: app.js  index.html  styles.css
frontend-react/: index.html  package-lock.json  package.json  vite.config.js
frontend-react/src/: App.css  App.jsx  SimulationContext.jsx  api.js  index.css  useLiftSimulation.js
frontend-react/src/components/: Building.css  Building.jsx  Controls.css  Controls.jsx  DesktopMessage.css  DesktopMessage.jsx
frontend-react/src/test/: App.test.jsx
frontend-react/src/utils/: liftPosition.js
tests/: test_algorithms.py
